wrong answer can not be chosen

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 <body>
     <div class="container">
-        <div id="question">Question</div>
-        <div id="answer-buttons" class="all-btn">
-            <button class="btn">Answer 1</button>
-            <button class="btn">Answer 2</button>
-            <button class="btn">Answer 3</button>
-            <button class="btn">Answer 4</button>
+        <div id="question-container" class="hide">
+            <div id="question">Question</div>
+            <div id="answer-buttons" class="btn-grid">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
         </div>
     </div>
     <div class="controls">
-        <button id="start" class="start">Start</button>
-        <button id="next" class="next">Next</button>
-
+        <button id="start-btn" class="start-btn btn">Start</button>
+        <button id="next-btn" class="next-btn btn hide">Next</button>
+    </div>
     </div>
 </body>
 </html>
